--- a/mealRatings/templates/mealRatings/header.html
+++ b/mealRatings/templates/mealRatings/header.html
@@ -10,7 +10,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="{%url 'index' %}">Home</a>
             </li>
@@ -30,6 +30,26 @@
                 <a class="nav-link" href="{%url 'category_list' 'top_rated_foods' %}">Top Rated</a>
             </li>
             </ul>
+            {% if False %}
+            <ul class="navbar-nav ">
+                <li class="nav-item">
+                   item
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{%url 'category_list' 'recently_added' %}">Log Out</a>
+                </li>
+            </ul>
+            {% endif %}
+            {% if True %}
+            <ul class="navbar-nav ">
+                <li class="nav-item">
+                   Hello Guest
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{%url 'login' %}">Login</a>
+                </li>
+            </ul>
+            {% endif %}
         </div>
     </nav>
 {% endblock header %}
