--- a/mealRatings/templates/mealRatings/index.html
+++ b/mealRatings/templates/mealRatings/index.html
@@ -7,6 +7,7 @@
 
 
 {% block content %}
+    {% include './header.html' %}
     <div class="d-flex flex-wrap justify-content-around">
         <div id="title-container" class="col-12 d-flex justify-content-center">
             <div class="col-6 d-flex justify-content-center flex-wrap">
