implement login logout #4

--- a/mealRatings/templates/mealRatings/index.html
+++ b/mealRatings/templates/mealRatings/index.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-    {% include './header.html' %}
+    {% include './header.html' with user=user %}
     <div class="d-flex flex-wrap justify-content-around">
         <div id="title-container" class="col-12 d-flex justify-content-center">
             <div class="col-6 d-flex justify-content-center flex-wrap">
