--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="{% static 'mealRatings/login.css' %}">
 {% endblock style %}
 {% block content %}
+{% include 'mealRatings/header.html' with user=user %}
 <div class="container">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
@@ -16,23 +17,15 @@
 				</div>
 			</div>
 			<div class="card-body">
-				<form>
+				<form method="post">{% csrf_token %}
+					{% for field in form %}
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="username">
-						
+						{{field}}	
 					</div>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-						<input type="password" class="form-control" placeholder="password">
-					</div>
-					<div class="row align-items-center remember">
-						<input type="checkbox">Remember Me
-					</div>
+					{% endfor %}
 					<div class="form-group">
 						<input type="submit" value="Login" class="btn float-right login_btn">
 					</div>
