--- a/mealRatings/templates/mealRatings/header.html
+++ b/mealRatings/templates/mealRatings/header.html
@@ -5,12 +5,12 @@
 {% endblock style %}
 {% block header %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Meal Ratings</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <a class="navbar-brand" href="#">Meal Ratings</a>    
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto">
+            {% comment %} <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="{%url 'index' %}">Home</a>
             </li>
@@ -29,21 +29,50 @@
             <li class="nav-item">
                 <a class="nav-link" href="{%url 'category_list' 'top_rated_foods' %}">Top Rated</a>
             </li>
-            </ul>
-            {% if False %}
-            <ul class="navbar-nav ">
-                <li class="nav-item">
-                   item
+             <ul class="navbar-nav mr-auto">{% endcomment %}
+            {% comment %} {% if user.is_authenticated %}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">See History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Add a meal</a>
+                    </li>
+                </ul>
+            {% endif %} {% endcomment %}
+            {% if user.is_authenticated %}
+             <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{%url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{%url 'category_list' 'recently_added' %}">Log Out</a>
+                    <a class="nav-link" href="#">See History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Add a meal</a>
                 </li>
             </ul>
-            {% endif %}
-            {% if True %}
             <ul class="navbar-nav ">
+                <li class="nav-item mr-3">
+                   <span class="navbar-text">
+                     Hello {{user.username}}
+                   </span>
+                </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{%url 'logout' %}">Log Out</a>
+                </li>
+            </ul>
+            {% else %}
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{%url 'index' %}">Home</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item mr-3">
+                    <span class="navbar-text">
                    Hello Guest
+                    </span>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{%url 'login' %}">Login</a>
