create signup page #8

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="../static/base.css">
     <link href="https://fonts.googleapis.com/css2?family=Itim&family=Orbitron&family=Paytone+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d38b6bb3a3.js" crossorigin="anonymous"></script>
     {% block style %}{% endblock style %}
     {% block script %}{% endblock script %}
     {% block title %}<title>Document</title>{% endblock title %}
