--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block style %}
-    <link rel="stylesheet" href="{% static 'mealRatings/login.css' %}">
+    <link rel="stylesheet" href="{% static 'mealRatings/signup.css' %}">
 {% endblock style %}
 {% block content %}
 {% include 'mealRatings/header.html' with user=user %}
@@ -9,7 +9,7 @@
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
-				<h3>Sign In</h3>
+				<h3>Sign Up</h3>
 				{% comment %} <div class="d-flex justify-content-end social_icon">
 					<span><i class="fab fa-facebook-square"></i></span>
 					<span><i class="fab fa-google-plus-square"></i></span>
@@ -22,27 +22,30 @@
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
-						</div>
-						{{field}}	
+						</div> 
+                        {% comment %} <div class="d-flex flex-column align-items-center"> {% endcomment %}
+                            {% comment %} <div class="col-12"> {% endcomment %}
+                                {{field}}
+                            {% comment %} </div> {% endcomment %}
+                            {% comment %} <div class="col-12">
+                                {{field.help_text}}	
+                            </div> {% endcomment %}
+                        {% comment %} </div> {% endcomment %}
+                       
+                       
 					</div>
 					{% endfor %}
 					<div class="form-group">
-						<input type="submit" value="Login" class="btn btn-info float-right login_btn">
+						<input type="submit" value="signup" class="signup_btn btn btn-info float-right">
 					</div>
 				</form>
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
-					Don't have an account?<a href={% url 'signup'%}>Sign Up</a>
-				</div>
-				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
+					If you have already your accnout<a href={%url 'login' %}>Log in</a>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 {% endblock content %}
-
-
-
